<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/white_back"
    tools:context="com.example.br161.finalproject.LegsAndTriceps">

    <!-- TextView for the Title of the page -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/Traps_and_Biceps_Title"
        android:gravity="center_horizontal"
        android:textSize="30sp"
        android:textColor="@color/Black"/>

    <!-- TextView showing what the checkbox does on the right -->
    <TextView
        android:id="@+id/tvCBComplete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Checkbox_Title"
        android:textColor="@color/Black"
        android:layout_below="@+id/tvTitle"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <!-- TextView above the Workout column -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/Workout_Name_Title"
        android:textColor="@color/Black"/>

    <!-- End of the Title portion of the XML -->


    <!-- TextView for the Dead Lifts Workout -->
    <TextView
        android:id="@+id/tvDLWorkout"
        android:paddingTop="4dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="@color/FireBrick"
        android:text="@string/Dead_Lifts_Workout"
        android:lines="1"
        android:layout_below="@+id/tvCBComplete"/>

    <!-- EditText for the weight for a workout -->
    <EditText
        android:id="@+id/tvWeight1"
        android:layout_toLeftOf="@+id/etReps1"
        android:layout_toStartOf="@+id/etReps1"
        android:layout_below="@id/tvCBComplete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="15sp"
        android:hint="@string/Weight_Hint"
        android:textColorHint="@color/Black"
        android:textColor="@color/Black"/>

    <!-- EditText for the reps for a workout -->
    <EditText
        android:id="@+id/etReps1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/Reps_Hint"
        android:layout_below="@+id/tvCBComplete"
        android:layout_toLeftOf="@+id/cb1"
        android:layout_toStartOf="@+id/cb1"
        android:textSize="15sp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:textColor="@color/FireBrick"
        android:textColorHint="@color/FireBrick"/>

    <!-- Checkbox indicating that a workout was completed -->
    <CheckBox
        android:id="@+id/cb1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvCBComplete"/>

    <!--################## End of Workout 1 ######################-->


    <!-- TextView for the Standing Dumbbell Curls Workout -->
    <TextView
        android:id="@+id/tvSDCWorkout"
        android:paddingTop="4dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="@color/FireBrick"
        android:text="@string/Standing_Dumbbell_Curls_Workout"
        android:lines="1"
        android:layout_below="@+id/tvDLWorkout"/>

    <!-- EditText for the weight for a workout -->
    <EditText
        android:id="@+id/tvWeight2"
        android:layout_toLeftOf="@+id/etReps2"
        android:layout_toStartOf="@+id/etReps2"
        android:layout_below="@id/tvDLWorkout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="15sp"
        android:hint="@string/Weight_Hint"
        android:textColorHint="@color/Black"
        android:textColor="@color/Black"/>
    <!-- EditText for the reps for a workout -->

    <EditText
        android:id="@+id/etReps2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/Reps_Hint"
        android:layout_below="@+id/tvDLWorkout"
        android:layout_toLeftOf="@+id/cb2"
        android:layout_toStartOf="@+id/cb2"
        android:textSize="15sp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:textColor="@color/FireBrick"
        android:textColorHint="@color/FireBrick"/>

    <!-- Checkbox indicating that a workout was completed -->

    <CheckBox
        android:id="@+id/cb2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvDLWorkout"/>

    <!--################## End of Workout 2 ######################-->


    <!-- TextView for the Hang Cleans Workout -->

    <TextView
        android:id="@+id/tvHCWorkout"
        android:paddingTop="4dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="@color/FireBrick"
        android:text="@string/Hang_Cleans_Workout"
        android:lines="1"
        android:layout_below="@+id/tvSDCWorkout"/>

    <!-- Checkbox indicating that a workout was completed -->

    <CheckBox
        android:id="@+id/cb3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvSDCWorkout"/>

    <!-- EditText for the reps for a workout -->

    <EditText
        android:id="@+id/etReps3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/Reps_Hint"
        android:layout_below="@+id/tvSDCWorkout"
        android:layout_toLeftOf="@+id/cb3"
        android:layout_toStartOf="@+id/cb3"
        android:textSize="15sp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"
        android:textColor="@color/FireBrick"
        android:textColorHint="@color/FireBrick"/>

    <!-- EditText for the weight for a workout -->

    <EditText
        android:id="@+id/tvWeight3"
        android:layout_toLeftOf="@+id/etReps3"
        android:layout_toStartOf="@+id/etReps3"
        android:layout_below="@id/tvSDCWorkout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"
        android:textSize="15sp"
        android:hint="@string/Weight_Hint"
        android:textColorHint="@color/Black"
        android:textColor="@color/Black"/>

    <!--################## End of Workout 3 ######################-->


    <!-- TextView for the Concentration Curls Workout -->

    <TextView
        android:id="@+id/tvCCWorkout"
        android:paddingTop="4dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="@color/FireBrick"
        android:text="@string/Concentration_Curls_Workout"
        android:lines="1"
        android:layout_below="@+id/tvHCWorkout"/>

    <!-- Checkbox indicating that a workout was completed -->

    <CheckBox
        android:id="@+id/cb4"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvHCWorkout"/>

    <!-- EditText for the reps for a workout -->

    <EditText
        android:id="@+id/etReps4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/Reps_Hint"
        android:layout_below="@+id/tvHCWorkout"
        android:layout_toLeftOf="@+id/cb4"
        android:layout_toStartOf="@+id/cb4"
        android:textSize="15sp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"
        android:textColor="@color/FireBrick"
        android:textColorHint="@color/FireBrick"/>

    <!-- EditText for the weight for a workout -->

    <EditText
        android:id="@+id/tvWeight4"
        android:layout_toLeftOf="@+id/etReps4"
        android:layout_toStartOf="@+id/etReps4"
        android:layout_below="@id/tvHCWorkout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"
        android:textSize="15sp"
        android:hint="@string/Weight_Hint"
        android:textColorHint="@color/Black"/>

    <!--################## End of Workout 4 ######################-->


    <!-- TextView for the Barbell Shrugs Workout -->

    <TextView
        android:id="@+id/tvBBSWorkout"
        android:paddingTop="4dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="@color/FireBrick"
        android:text="@string/Barbell_Shrugs_Workout"
        android:lines="1"
        android:layout_below="@+id/tvCCWorkout"/>

    <!-- Checkbox indicating that a workout was completed -->

    <CheckBox
        android:id="@+id/cb5"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvCCWorkout"/>

    <!-- EditText for the reps for a workout -->

    <EditText
        android:id="@+id/etReps5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/Reps_Hint"
        android:layout_below="@+id/tvCCWorkout"
        android:layout_toLeftOf="@+id/cb5"
        android:layout_toStartOf="@+id/cb5"
        android:textSize="15sp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"
        android:textColor="@color/FireBrick"
        android:textColorHint="@color/FireBrick"/>

    <!-- EditText for the weight for a workout -->

    <EditText
        android:id="@+id/tvWeight5"
        android:layout_toLeftOf="@+id/etReps5"
        android:layout_toStartOf="@+id/etReps5"
        android:layout_below="@id/tvCCWorkout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"
        android:textSize="15sp"
        android:hint="@string/Weight_Hint"
        android:textColorHint="@color/Black"/>

    <!--################## End of Workout 5 ######################-->


    <!-- TextView for the Barbell Curls Workout -->

    <TextView
        android:id="@+id/tvBCWorkout"
        android:paddingTop="4dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="@color/FireBrick"
        android:text="@string/Barbell_Curls_Workout"
        android:lines="1"
        android:layout_below="@+id/tvBBSWorkout"/>

    <!-- Checkbox indicating that a workout was completed -->

    <CheckBox
        android:id="@+id/cb6"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvBBSWorkout"/>

    <!-- EditText for the reps for a workout -->

    <EditText
        android:id="@+id/etReps6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/Reps_Hint"
        android:layout_below="@+id/tvBBSWorkout"
        android:layout_toLeftOf="@+id/cb6"
        android:layout_toStartOf="@+id/cb6"
        android:textSize="15sp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"
        android:textColor="@color/FireBrick"
        android:textColorHint="@color/FireBrick"/>

    <!-- EditText for the weight for a workout -->

    <EditText
        android:id="@+id/tvWeight6"
        android:layout_toLeftOf="@+id/etReps6"
        android:layout_toStartOf="@+id/etReps6"
        android:layout_below="@id/tvBBSWorkout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"
        android:textSize="15sp"
        android:hint="@string/Weight_Hint"
        android:textColorHint="@color/Black"/>

    <!--################## End of Workout 6 ######################-->


    <!-- TextView for the Cable Upright Rows Workout -->

    <TextView
        android:id="@+id/tvCURWorkout"
        android:paddingTop="4dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="@color/FireBrick"
        android:text="@string/Cable_Upright_Rows_Workout"
        android:lines="1"
        android:layout_below="@+id/tvBCWorkout"/>

    <!-- Checkbox indicating that a workout was completed -->

    <CheckBox
        android:id="@+id/cb7"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvBCWorkout"/>

    <!-- EditText for the reps for a workout -->

    <EditText
        android:id="@+id/etReps7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/Reps_Hint"
        android:layout_below="@+id/tvBCWorkout"
        android:layout_toLeftOf="@+id/cb7"
        android:layout_toStartOf="@+id/cb7"
        android:textSize="15sp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"
        android:textColor="@color/FireBrick"
        android:textColorHint="@color/FireBrick"/>

    <!-- EditText for the weight for a workout -->

    <EditText
        android:id="@+id/tvWeight7"
        android:layout_toLeftOf="@+id/etReps7"
        android:layout_toStartOf="@+id/etReps7"
        android:layout_below="@id/tvBCWorkout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"
        android:textSize="15sp"
        android:hint="@string/Weight_Hint"
        android:textColorHint="@color/Black"/>

    <!--################## End of Workout 7 ######################-->


    <!-- TextView for the Cable Curls Workout -->
    <TextView
        android:id="@+id/tvCableCWorkout"
        android:paddingTop="4dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="@color/FireBrick"
        android:text="@string/Cable_Curls_Workout"
        android:lines="1"
        android:layout_below="@+id/tvCURWorkout"/>

    <!-- Checkbox indicating that a workout was completed -->

    <CheckBox
        android:id="@+id/cb8"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvCURWorkout"/>

    <!-- EditText for the reps for a workout -->

    <EditText
        android:id="@+id/etReps8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/Reps_Hint"
        android:layout_below="@+id/tvCURWorkout"
        android:layout_toLeftOf="@+id/cb8"
        android:layout_toStartOf="@+id/cb8"
        android:textSize="15sp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"
        android:textColor="@color/FireBrick"
        android:textColorHint="@color/FireBrick"/>

    <!-- EditText for the weight for a workout -->

    <EditText
        android:id="@+id/tvWeight8"
        android:layout_toLeftOf="@+id/etReps8"
        android:layout_toStartOf="@+id/etReps8"
        android:layout_below="@id/tvCURWorkout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"
        android:textSize="15sp"
        android:hint="@string/Weight_Hint"
        android:textColorHint="@color/Black"/>

    <!--################## End of Workout 8 ######################-->

</RelativeLayout>
